Renamed controls to camera
This is an even smaller change, just adding more comments, rephrasing
current comments and changing the name of controls.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,8 @@ add_executable(src
 	src/main.cpp
 	src/shader.cpp
 	src/shader.hpp
-	src/controls.cpp
-	src/controls.hpp
+	src/camera.cpp
+	src/camera.hpp
 	src/Cube.hpp
 	src/Cube.cpp
 	
